--- a/rejestracja_formularz/index.html
+++ b/rejestracja_formularz/index.html
@@ -321,12 +321,16 @@ document.getElementById('register-form').addEventListener('submit', async e => {
   try {
     const res = await fetch('https://tfbqqduxtsacvwfigsvt.supabase.co/functions/v1/send_welcome_email', {
       method: 'POST',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify({
-        email: currentUser.email,
-        name: document.getElementById('imie').value
-      })
+    headers: {
+      'Content-Type': 'application/json',
+      'Authorization': 'Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8'
+    },
+    body: JSON.stringify({
+      email: currentUser.email,
+      name: 'Piotr'
     })
+  }
+)
     if (!res.ok) {
       const err = await res.text()
       throw new Error(err || 'Błąd wysyłki emaila')
