--- a/rejestracja_formularz/index.html
+++ b/rejestracja_formularz/index.html
@@ -6,7 +6,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Rejestracja – Ogólnopolski Rejestr Elektryków</title>
+
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -16,12 +18,14 @@
       padding: 10px;
       margin: 0;
     }
+
     .form-wrapper {
       width: 100%;
       max-width: 600px;
       padding: 0 10px;
       box-sizing: border-box;
     }
+
     form {
       position: relative;
       background-color: #fff;
@@ -30,13 +34,16 @@
       box-shadow: 0 4px 12px rgba(0,0,0,0.1);
       box-sizing: border-box;
     }
+
     h2 { text-align: center; margin-bottom: 20px; font-size: 22px; }
+
     label {
       margin-top: 15px;
       display: block;
       font-weight: 600;
       font-size: 14px;
     }
+
     input, textarea, select {
       width: 100%;
       padding: 10px;
@@ -47,12 +54,17 @@
       background-color: #fff;
       color: #000;
     }
+
     input[readonly] { background-color: #f4f6f8; cursor: not-allowed; }
     input[type="tel"] { ime-mode: disabled; }
+
     select:disabled { background-color: #f4f6f8; color: #555; cursor: not-allowed; }
     select:not(:disabled) { background-color: #fff; color: #000; }
+
     select { height: 42px; }
+
     textarea { min-height: 80px; }
+
     button[type="submit"] {
       margin-top: 20px;
       width: 100%;
@@ -65,6 +77,7 @@
       cursor: pointer;
     }
     button[type="submit"]:hover { background: #45a049; }
+
     #close-btn {
       position: absolute;
       top: 12px;
@@ -78,9 +91,11 @@
       line-height: 1;
     }
     #close-btn:hover { color: #000; }
+
     #result { margin-top: 15px; padding: 10px; text-align: center; font-weight: bold; }
     .error { background: #f44336; color: #fff; }
     #loading { display: none; text-align: center; margin-top: 10px; font-weight: bold; }
+
     .rodo-label {
       display: flex;
       flex-direction: row;
@@ -94,54 +109,73 @@
     .rodo-label input[type="checkbox"] { margin-top: 2px; accent-color: orange; }
   </style>
 </head>
+
 <body>
 <div class="form-wrapper">
 <form id="register-form">
+
   <button type="button" id="close-btn" aria-label="Zamknij formularz">❌</button>
+
   <h2 id="form-title">Rejestracja</h2>
+
   <label>Imię</label>
   <input id="imie" required oninput="this.value=this.value.toUpperCase()">
+
   <label>Nazwisko</label>
   <input id="nazwisko" required oninput="this.value=this.value.toUpperCase()">
+
   <label for="wojewodztwo">Województwo</label>
   <select id="wojewodztwo" required>
     <option value="">— wybierz województwo —</option>
   </select>
+
   <label for="miasto">Miasto</label>
   <select id="miasto" required disabled>
     <option value="">— wybierz miasto —</option>
   </select>
+
   <label>Nr upr. EKSPLOATACJA</label>
   <textarea id="nrE"></textarea>
+
   <label>Nr upr. EKSPLOATACJA Z POMIARAMI</label>
   <textarea id="nrEPomiary"></textarea>
+
   <label>Nr upr. DOZÓR</label>
   <textarea id="nrD"></textarea>
+
   <label>Email</label>
   <input id="email" readonly>
+
   <label>Telefon</label>
   <input id="telefon" type="tel">
+
   <label>Zajmuje się</label>
   <textarea id="zajmujeSie"></textarea>
+
   <label>Załącz skan uprawnień</label>
   <input type="file" id="plik" multiple>
+
   <label class="rodo-label">
     <input type="checkbox" id="rodo" required>
     Wyrażam zgodę na przetwarzanie moich danych osobowych w celu publikacji w Ogólnopolskim Rejestrze Elektryków zgodnie z Regulaminem Platformy. Oświadczam, że dane są prawdziwe i ponoszę za nie odpowiedzialność.
   </label>
+
   <button type="submit" id="submit-btn">Zarejestruj</button>
+
   <div id="loading">Zapisywanie danych...</div>
   <div id="result"></div>
 </form>
 </div>
+
 <script type="module">
 import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'
+
 const supabase = createClient(
   'https://tfbqqduxtsacvwfigsvt.supabase.co',
   'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8'
 )
+
 let currentUser = null
-let isUpdate = false
 const fields = ['imie','nazwisko','miasto','wojewodztwo','nrE','nrEPomiary','nrD','telefon','zajmujeSie']
 
 async function loadWojewodztwa(selectedWoj = null) {
@@ -187,17 +221,21 @@ document.getElementById('close-btn').addEventListener('click', () => {
 
 document.addEventListener('DOMContentLoaded', async () => {
   const { data: { user } } = await supabase.auth.getUser()
+
   if (!user) {
     window.location.href = '/logowanie'
     return
   }
+
   currentUser = user
   email.value = user.email
 
-  const { data } = await supabase.from('tabela_elektrykow').select('*').eq('email', user.email).single()
+  const { data } = await supabase.from('tabela_elektrykow')
+    .select('*')
+    .eq('email', user.email)
+    .single()
 
   if (data) {
-    isUpdate = true
     document.getElementById('form-title').textContent = 'Aktualizacja danych'
     document.getElementById('submit-btn').textContent = 'Zapisz zmiany'
     fields.forEach(f => data[f] && (document.getElementById(f).value = data[f]))
@@ -215,23 +253,28 @@ document.getElementById('register-form').addEventListener('submit', async e => {
     result.className = 'error'
     return
   }
+
   loading.style.display = 'block'
   result.textContent = ''
   result.className = ''
+
   if (nrE.value && nrEPomiary.value) {
     loading.style.display='none'
     result.textContent='Wybierz tylko jeden rodzaj eksploatacji'
     result.className='error'
     return
   }
+
   if (nrD.value && !nrEPomiary.value) {
     loading.style.display='none'
     result.textContent='Do DOZORU wymagane są pomiary'
     result.className='error'
     return
   }
+
   const allowedTypes = ['application/pdf','image/jpeg','image/png']
   const maxSize = 5*1024*1024
+
   let plikUrls=[]
   for (let i=0;i<plik.files.length;i++) {
     const file = plik.files[i]
@@ -274,26 +317,27 @@ document.getElementById('register-form').addEventListener('submit', async e => {
     return
   }
 
-  // WYSYŁKA EMAILA – nowa funkcja
+  // WYSYŁKA EMAILA – Edge Function obsługuje Resend API Key
   try {
     const res = await fetch('https://tfbqqduxtsacvwfigsvt.supabase.co/functions/v1/send_email_rejestracja_aktualizacja', {
       method: 'POST',
-      headers: {
-        'Content-Type': 'application/json',
-        'Authorization': 'Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8'
-      },
-      body: JSON.stringify({
-        email: currentUser.email,
-        name: document.getElementById('imie').value,
-        update: isUpdate
-      })
+    headers: {
+      'Content-Type': 'application/json',
+      'Authorization': 'Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8'
+    },
+  body: JSON.stringify({
+  email: currentUser.email,
+  name: document.getElementById('imie').value,
+    update: !!existing
     })
+  }
+)
     if (!res.ok) {
       const err = await res.text()
       throw new Error(err || 'Błąd wysyłki emaila')
     }
   } catch(err) {
-    result.textContent = 'Nie udało się wysłać emaila: ' + err.message
+    result.textContent = 'Nie udało się wysłać emaila powitalnego: ' + err.message
     result.className = 'error'
     return
   }
