--- a/rejestracja_formularz/index.html
+++ b/rejestracja_formularz/index.html
@@ -37,6 +37,7 @@
 <body>
 <div class="form-wrapper">
 <form id="register-form">
+
   <button type="button" id="close-btn" aria-label="Zamknij formularz">❌</button>
   <h2 id="form-title">Rejestracja</h2>
 
@@ -143,15 +144,10 @@ document.getElementById('close-btn').addEventListener('click', () => {
 document.addEventListener('DOMContentLoaded', async () => {
   const { data: { user } } = await supabase.auth.getUser()
   if (!user) { window.location.href = '/logowanie'; return }
-
   currentUser = user
   email.value = user.email
 
-  const { data } = await supabase.from('tabela_elektrykow')
-    .select('*')
-    .eq('email', user.email)
-    .single()
-
+  const { data } = await supabase.from('tabela_elektrykow').select('*').eq('email', user.email).single()
   if (data) {
     document.getElementById('form-title').textContent = 'Aktualizacja danych'
     document.getElementById('submit-btn').textContent = 'Zapisz zmiany'
@@ -165,11 +161,11 @@ document.addEventListener('DOMContentLoaded', async () => {
 
 document.getElementById('register-form').addEventListener('submit', async e => {
   e.preventDefault()
-  if (!currentUser) { result.textContent = 'Musisz być zalogowany'; result.className = 'error'; return }
+  if (!currentUser) { result.textContent='Musisz być zalogowany'; result.className='error'; return }
+  const nameValue = document.getElementById('imie').value.trim()
+  if (!nameValue) { result.textContent='Proszę podać imię'; result.className='error'; return }
 
-  loading.style.display = 'block'
-  result.textContent = ''
-  result.className = ''
+  loading.style.display = 'block'; result.textContent=''; result.className=''
 
   if (nrE.value && nrEPomiary.value) { loading.style.display='none'; result.textContent='Wybierz tylko jeden rodzaj eksploatacji'; result.className='error'; return }
   if (nrD.value && !nrEPomiary.value) { loading.style.display='none'; result.textContent='Do DOZORU wymagane są pomiary'; result.className='error'; return }
@@ -200,22 +196,24 @@ document.getElementById('register-form').addEventListener('submit', async e => {
     const { error: e3 } = await supabase.from('tabela_elektrykow').insert(payload)
     error = e3
   }
-
   loading.style.display='none'
-  if (error) { result.textContent = error.message; result.className = 'error'; return }
+  if (error) { result.textContent=error.message; result.className='error'; return }
 
-  // WYSYŁKA EMAILA – Edge Function
+  // WYSYŁKA EMAILA – Edge Function obsługuje Resend API Key
   try {
     const res = await fetch('https://tfbqqduxtsacvwfigsvt.supabase.co/functions/v1/send_email_rejestracja_aktualizacja', {
       method: 'POST',
       headers: { 'Content-Type': 'application/json' },
       body: JSON.stringify({
         email: currentUser.email,
-        name: document.getElementById('imie').value,
+        name: nameValue,
         update: !!existing
       })
     })
-    if (!res.ok) { const err = await res.text(); throw new Error(err || 'Błąd wysyłki emaila') }
+    if (!res.ok) {
+      const err = await res.text()
+      throw new Error(err || 'Błąd wysyłki emaila')
+    }
   } catch(err) {
     result.textContent = 'Nie udało się wysłać emaila: ' + err.message
     result.className = 'error'
