--- a/rejestracja_formularz/index.html
+++ b/rejestracja_formularz/index.html
@@ -329,9 +329,7 @@ document.getElementById('register-form').addEventListener('submit', async e => {
   email: currentUser.email,
   name: document.getElementById('imie').value,
   nazwisko: document.getElementById('nazwisko').value,
-    email: document.getElementById('email').value,
-    miasto: document.getElementById('miasto').value,
-    wojewodztwo: document.getElementById('wojewodztwo').value,
+    telefon: document.getElementById('telefon').value,
     nrE: document.getElementById('nrE').value,
     nrEPomiary: document.getElementById('nrEPomiary').value,
     nrD: document.getElementById('nrD').value
